Ajustes no entity para relacionamento onetomany